fixed height and width of profile splash page and alignment of buttons

--- a/yb_profile/static/css/yb_profile/yb_profile.css
+++ b/yb_profile/static/css/yb_profile/yb_profile.css
@@ -179,6 +179,8 @@ Profile Page
 .splash-page.profile {
     backdrop-filter: blur(20px) brightness(50%);
     -webkit-backdrop-filter: blur(20px) brightness(50%);
+    height: 100vh;
+    width: 100vw;
 }
 
 .splash-page.end {
@@ -301,7 +303,7 @@ Profile Page
 
 .profile-interaction-container {
     display: grid;
-    width: 90%;
+    width: 100%;
     max-width: 500px;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
